# nasa_space_biology_knowledge_engine

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
dashboard/: Home.py
dashboard/pages/: 1_At a Glance.py  1_Space Biology publications.py  1_page.py  2_Browse by Topic.py  2_Explore.py
dashboard/tabs/: general_info.py  highlights.py  overview.py
labs/: detect_incorrect_links.ipynb
src/ai/: abstract_model.ipynb  generate_embeddings.ipynb  generate_main_ideas.ipynb  publication_searcher.ipynb
src/data_model/: abstract_model.ipynb
src/data_retrieval/: clean_sb_publications_pmc.ipynb  extract_disciplines_from_xml.ipynb  extract_fields_from_xml.ipynb  extract_plain_text_from_xml.ipynb  retrieve_sb_publications_xmls.ipynb  retrieve_xmls.ipynb
viz/: Demo.ipynb
