[project]
name = "nasa-space-biology-knowledge-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "jupyterlab>=4.4.9",
    "jupytext>=1.17.3",
]
