[project]
name = "nasa-space-biology-knowledge-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "squarify>=0.4.4",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "jupyterlab>=4.4.9",
    "jupytext>=1.17.3",
]
