[project]
name = "nasa-space-biology-knowledge-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "streamlit>=1.50.0",
    "chromadb>=1.1.1",
    "sentence-transformers>=5.1.1",
    "matplotlib>=3.10.6",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "biopython>=1.85",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "tqdm>=4.67.1",
    "mistralai>=1.9.11"
]
